--- a/operations/build.gradle
+++ b/operations/build.gradle
@@ -6,8 +6,10 @@ dependencies {
     implementation libs.nva.json
     implementation libs.nva.core
     implementation libs.nva.apigateway
+    implementation libs.nva.secrets
 
     implementation libs.aws.lambda.java.core
+    implementation libs.aws.sdk2.secrets
 
     implementation libs.bundles.logging
     implementation libs.bundles.jackson
