--- a/template.yaml
+++ b/template.yaml
@@ -53,7 +53,20 @@ Globals:
       AllowOrigin: "'*'"
 
 Resources:
-
+  ReadHandleDatabaseSecretsManagedPolicy:
+    Type: AWS::IAM::ManagedPolicy
+    Properties:
+      Roles:
+        - !Ref LambdaRole
+      PolicyDocument:
+        Version: '2012-10-17'
+        Statement:
+          - Effect: Allow
+            Action:
+              - secretsmanager:GetSecretValue
+            Resource:
+              - !Sub "arn:aws:secretsmanager:${AWS::Region}:${AWS::AccountId}:secret:HandleDatabase-*"
+              -
   ApiAccessLogGroup:
     Type: AWS::Logs::LogGroup
     Properties:
@@ -88,6 +101,7 @@ Resources:
       Policies:
         - AWSLambdaBasicExecutionRole
         - AWSLambdaVPCAccessExecutionRole
+        - !GetAtt ReadHandleDatabaseSecretsManagedPolicy.PolicyArn
       Environment:
         Variables:
           ALLOWED_ORIGIN: !Ref AllowedOrigins
@@ -122,6 +136,7 @@ Resources:
       Policies:
         - AWSLambdaBasicExecutionRole
         - AWSLambdaVPCAccessExecutionRole
+        - !GetAtt ReadHandleDatabaseSecretsManagedPolicy.PolicyArn
       Environment:
         Variables:
           ALLOWED_ORIGIN: !Ref AllowedOrigins
