--- a/template.yaml
+++ b/template.yaml
@@ -19,6 +19,9 @@ Parameters:
     Type: String
     Description: Base path mapping in CustomDomain
     Default: handle
+  ApprovalsDomainBasePath:
+    Type: String
+    Default: approvals
   HandleBaseUri:
     Type: String
     Description: The host part of Handle URIs
@@ -91,7 +94,22 @@ Resources:
         'Fn::Transform':
           Name: AWS::Include
           Parameters:
-            Location: ./docs/openapi.yaml
+            Location: ./docs/handle-openapi.yaml
+
+  NvaApprovalsApi:
+    Type: AWS::Serverless::Api
+    Properties:
+      AccessLogSetting:
+        DestinationArn: !GetAtt ApiAccessLogGroup.Arn
+        Format: '{ "apiId": "$context.apiId", "requestId": "$context.requestId", "requestTime": "$context.requestTime", "requestTimeEpoch": "$context.requestTimeEpoch", "httpMethod": "$context.httpMethod", "path": "$context.path", "status": "$context.status",  "error.message": "$context.error.message" }'
+      StageName: Prod
+      EndpointConfiguration:
+        Type: REGIONAL
+      DefinitionBody:
+        'Fn::Transform':
+          Name: AWS::Include
+          Parameters:
+            Location: ./docs/approvals-openapi.yaml
 
   NvaCreateHandleFunctionLogGroup:
     Type: AWS::Logs::LogGroup
@@ -170,3 +188,11 @@ Resources:
       DomainName: !Ref ApiDomain
       RestApiId: !Ref NvaHandleServiceApi
       Stage: !Ref NvaHandleServiceApi.Stage
+
+  NvaApprovalsApiBasePathMapping:
+    Type: AWS::ApiGateway::BasePathMapping
+    Properties:
+      BasePath: !Sub ${ApprovalsDomainBasePath}
+      DomainName: !Ref ApiDomain
+      RestApiId: !Ref NvaApprovalsApi
+      Stage: !Ref NvaApprovalsApi.Stage
