renaming base path to /approval

--- a/template.yaml
+++ b/template.yaml
@@ -21,7 +21,7 @@ Parameters:
     Default: handle
   ApprovalsDomainBasePath:
     Type: String
-    Default: approvals
+    Default: approval
   HandleBaseUri:
     Type: String
     Description: The host part of Handle URIs
