--- a/template.yaml
+++ b/template.yaml
@@ -86,7 +86,21 @@ Resources:
     Properties:
       AccessLogSetting:
         DestinationArn: !GetAtt ApiAccessLogGroup.Arn
-        Format: '{ "apiId": "$context.apiId", "requestId": "$context.requestId", "requestTime": "$context.requestTime", "requestTimeEpoch": "$context.requestTimeEpoch", "httpMethod": "$context.httpMethod", "path": "$context.path", "status": "$context.status",  "error.message": "$context.error.message" }'
+        Format: !Join
+          - ''
+          - - '{ '
+            - '"apiId": "$context.apiId", '
+            - '"requestId": "$context.requestId", '
+            - '"requestTime": "$context.requestTime", '
+            - '"requestTimeEpoch": "$context.requestTimeEpoch", '
+            - '"httpMethod": "$context.httpMethod", '
+            - '"path": "$context.path", '
+            - '"queryString": "$context.requestQueryString", '
+            - '"status": "$context.status", '
+            - '"error.message": "$context.error.message", '
+            - '"userAgent": "$context.identity.userAgent", '
+            - '"ip": "$context.identity.sourceIp" '
+            - '}'
       StageName: Prod
       EndpointConfiguration:
         Type: REGIONAL
@@ -186,8 +200,6 @@ Resources:
     Properties:
       CodeUri: approvals
       Handler: no.sikt.nva.approvals.CreateApprovalHandler::handleRequest
-      Policies:
-        - AWSLambdaBasicExecutionRole
       Environment:
         Variables:
           ALLOWED_ORIGIN: !Ref AllowedOrigins
