--- a/approvals/build.gradle
+++ b/approvals/build.gradle
@@ -4,10 +4,12 @@ dependencies {
     implementation libs.nva.core
     implementation libs.nva.json
 
+    implementation libs.aws.sdk2.dynamoenhanced
     implementation libs.aws.sdk2.dynamo
     implementation libs.bundles.jackson
 
     testImplementation libs.bundles.testing
+    testImplementation libs.dynamodDbLocal
 }
 
 test {
