extending create approval handler with domain logic (#19)
* extending create approval handler with domain logic

* moving exception handling to own method

* implementing suggestions from code review

--- a/template.yaml
+++ b/template.yaml
@@ -203,7 +203,7 @@ Resources:
     Type: AWS::Serverless::Function
     Properties:
       CodeUri: approvals
-      Handler: no.sikt.nva.approvals.CreateApprovalHandler::handleRequest
+      Handler: no.sikt.nva.approvals.rest.CreateApprovalHandler::handleRequest
       Environment:
         Variables:
           ALLOWED_ORIGIN: !Ref AllowedOrigins
