creating empty repository

--- a/approvals/build.gradle
+++ b/approvals/build.gradle
@@ -5,8 +5,10 @@ dependencies {
     implementation libs.nva.json
 
     implementation libs.aws.sdk2.dynamo
+    implementation libs.aws.sdk2.dynamoenhanced
     implementation libs.bundles.jackson
 
+    testImplementation libs.dynamodDbLocal
     testImplementation libs.bundles.testing
 }
 
