feat(approvals): add GET /approval/{approvalId} endpoint #NP-50444
- Add GetApprovalHandler for retrieving approval by ID
- Add ApprovalNotFoundException for not found cases
- Extend ApprovalService with getApprovalByIdentifier method
- Update OpenAPI spec with GET endpoint definition
- Add Lambda function configuration in SAM template
- Fix some environment variables in template
- Moved FakeApprovalService to separate file
- Add log groups to template

--- a/template.yaml
+++ b/template.yaml
@@ -59,6 +59,7 @@ Globals:
       - arm64
     Environment:
       Variables:
+        ALLOWED_ORIGIN: !Ref AllowedOrigins
         API_HOST: !Ref ApiDomain
         COGNITO_AUTHORIZER_URLS: !Join [ ",", !Ref CognitoAuthorizerUrls ]
   Api:
@@ -146,8 +147,6 @@ Resources:
         - !GetAtt ReadHandleDatabaseSecretsManagedPolicy.PolicyArn
       Environment:
         Variables:
-          ALLOWED_ORIGIN: !Ref AllowedOrigins
-          API_HOST: !Ref ApiDomain
           HANDLE_PREFIX: !Ref HandlePrefix
           HANDLE_BASE_URI: !Ref HandleBaseUri
           HANDLE_DATABASE_SECRET_NAME: !Ref HandleDatabaseSecretName
@@ -181,8 +180,6 @@ Resources:
         - !GetAtt ReadHandleDatabaseSecretsManagedPolicy.PolicyArn
       Environment:
         Variables:
-          ALLOWED_ORIGIN: !Ref AllowedOrigins
-          API_HOST: !Ref ApiDomain
           HANDLE_PREFIX: !Ref HandlePrefix
           HANDLE_BASE_URI: !Ref HandleBaseUri
           HANDLE_DATABASE_SECRET_NAME: !Ref HandleDatabaseSecretName
@@ -199,21 +196,42 @@ Resources:
             Method: put
             RestApiId: !Ref NvaHandleServiceApi
 
+  NvaCreateApprovalFunctionLogGroup:
+    Type: AWS::Logs::LogGroup
+    Properties:
+      LogGroupName: !Sub '/aws/lambda/${NvaCreateApprovalFunction}'
+      RetentionInDays: 90
+
   NvaCreateApprovalFunction:
     Type: AWS::Serverless::Function
     Properties:
       CodeUri: approvals
       Handler: no.sikt.nva.approvals.rest.CreateApprovalHandler::handleRequest
-      Environment:
-        Variables:
-          ALLOWED_ORIGIN: !Ref AllowedOrigins
-          API_HOST: !Ref ApiDomain
       Events:
-        CreateHandle:
+        CreateApproval:
           Type: Api
           Properties:
             Path: /
             Method: post
+            RestApiId: !Ref NvaApprovalsApi
+
+  NvaGetApprovalFunctionLogGroup:
+    Type: AWS::Logs::LogGroup
+    Properties:
+      LogGroupName: !Sub '/aws/lambda/${NvaGetApprovalFunction}'
+      RetentionInDays: 90
+
+  NvaGetApprovalFunction:
+    Type: AWS::Serverless::Function
+    Properties:
+      CodeUri: approvals
+      Handler: no.sikt.nva.approvals.rest.GetApprovalHandler::handleRequest
+      Events:
+        GetApproval:
+          Type: Api
+          Properties:
+            Path: /{approvalId}
+            Method: get
             RestApiId: !Ref NvaApprovalsApi
 
   NvaCreateHandleBasePathMapping:
