take in use new method from handle database

--- a/approvals/build.gradle
+++ b/approvals/build.gradle
@@ -18,4 +18,5 @@ dependencies {
 test {
     environment("COGNITO_AUTHORIZER_URLS", "urls")
     environment("ALLOWED_ORIGIN", "*")
+    environment("HANDLE_PREFIX", "prefix")
 }
