reading table name from environment

--- a/approvals/build.gradle
+++ b/approvals/build.gradle
@@ -19,4 +19,5 @@ test {
     environment("COGNITO_AUTHORIZER_URLS", "urls")
     environment("ALLOWED_ORIGIN", "*")
     environment("HANDLE_PREFIX", "prefix")
+    environment("TABLE", "table")
 }
