adding required env variables to fetch function

--- a/template.yaml
+++ b/template.yaml
@@ -320,7 +320,10 @@ Resources:
         - !Ref DynamoDbTableAccessPolicy
       Environment:
         Variables:
+          HANDLE_PREFIX: !If [IsProd, !Ref HandlePrefixForApprovals, !Ref HandlePrefix]
           TABLE: !Ref ApprovalsTable
+          HANDLE_BASE_URI: !Ref HandleBaseUri
+          HANDLE_DATABASE_SECRET_NAME: !Ref HandleDatabaseSecretName
       Events:
         GetApproval:
           Type: Api
