--- a/buildSrc/src/main/groovy/nva-handle-service.java-common-conventions.gradle
+++ b/buildSrc/src/main/groovy/nva-handle-service.java-common-conventions.gradle
@@ -9,9 +9,6 @@ plugins {
 group = 'com.github.bibsysdev'
 
 
-dependencies {
-    testImplementation libs.bundles.testing
-}
 
 java {
     sourceCompatibility = JavaVersion.VERSION_21
@@ -20,6 +17,7 @@ java {
 
 repositories {
     mavenCentral()
+    maven { url 'https://jitpack.io' }
 }
 
 tasks.named('test') {
