feat(approvals): add JSON-LD context and RDF ontology endpoints #NP-50457
Add @context field to ApprovalResponse pointing to /approval/context endpoint.
Add /context and /ontology endpoints for serving JSON-LD context and RDF ontology.

--- a/approvals/build.gradle
+++ b/approvals/build.gradle
@@ -10,6 +10,7 @@ dependencies {
     implementation nvaCatalog.aws.sdk2.urlconnection
 
     implementation nvaCatalog.bundles.jackson
+    implementation nvaCatalog.guava
 
     testImplementation nvaLibs.testutils
     testImplementation nvaCatalog.bundles.testing.junit
