feat(approvals): add HTML content negotiation for GET /approval/{id} #NP-50527

--- a/.gitignore
+++ b/.gitignore
@@ -290,3 +290,6 @@ gradle-app.setting
 /.aws-sam/build.toml
 
 **/dynamodb-local-metadata.json
+
+### JTE (Java Template Engine) ###
+**/jte-classes/
