--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -5,3 +5,6 @@ jte = '3.2.1'
 [libraries]
 postgres = { group = 'org.postgresql', name = 'postgresql', version.ref = 'postgres' }
 jte = { group = 'gg.jte', name = 'jte', version.ref = 'jte' }
+
+[plugins]
+jte = { id = 'gg.jte.gradle', version.ref = 'jte' }
