feat(approvals): integrate DMP API for clinical trial data in HTML view #NP-50567
- Add DMP (Norwegian Medicines Agency) API integration to fetch clinical trial data when rendering approval HTML pages
- Implement OAuth2 client credentials flow for DMP API authentication with token caching
- Enrich HTML model with clinical trial details (title, sponsors, trial sites, investigators, study period) when approval has a "DMP" named identifier
- fall back to basic HTML rendering when DMP data is unavailable or API fails

--- a/approvals/build.gradle
+++ b/approvals/build.gradle
@@ -7,6 +7,8 @@ dependencies {
     implementation nvaLibs.apigateway
     implementation nvaLibs.core
     implementation nvaLibs.json
+    implementation nvaLibs.secrets
+    implementation nvaCatalog.aws.sdk2.secrets
 
     implementation nvaCatalog.aws.sdk2.dynamo
     implementation nvaCatalog.aws.sdk2.dynamodbenhanced
