--- a/template.yaml
+++ b/template.yaml
@@ -53,6 +53,14 @@ Parameters:
     Type: String
     Description: comma separated list of external clients that are allowed to contact the HTTP APIs, "*" indicates that all origins are allowed
     Default: '*'
+  DmpClientSecretArn:
+    Type: 'AWS::SSM::Parameter::Value<String>'
+    Description: ARN of the secret containing DMP API client credentials
+    Default: /NVA/DmpClientSecretArn
+  DmpClientSecretName:
+    Type: 'AWS::SSM::Parameter::Value<String>'
+    Description: Name of the secret containing DMP API client credentials
+    Default: /NVA/DmpClientSecretName
 
 Conditions:
   IsProd: !Equals [!Ref ApiDomain, 'api.nva.unit.no']
@@ -156,6 +164,19 @@ Resources:
             Resource:
               - !GetAtt ApprovalsTable.Arn
               - !Sub '${ApprovalsTable.Arn}/index/*'
+
+  ReadDmpClientSecretsManagedPolicy:
+    Type: AWS::IAM::ManagedPolicy
+    Properties:
+      PolicyDocument:
+        Version: '2012-10-17'
+        Statement:
+          - Effect: Allow
+            Action:
+              - secretsmanager:GetSecretValue
+            Resource:
+              - !Ref DmpClientSecretArn
+
   ApiAccessLogGroup:
     Type: AWS::Logs::LogGroup
     Properties:
@@ -352,12 +373,14 @@ Resources:
       Handler: no.sikt.nva.approvals.rest.FetchApprovalHandler::handleRequest
       Policies:
         - !Ref DynamoDbTableAccessPolicy
+        - !Ref ReadDmpClientSecretsManagedPolicy
       Environment:
         Variables:
           HANDLE_PREFIX: !If [IsProd, !Ref HandlePrefixForApprovals, !Ref HandlePrefix]
           TABLE: !Ref ApprovalsTable
           HANDLE_BASE_URI: !Ref HandleBaseUri
           HANDLE_DATABASE_SECRET_NAME: !Ref HandleDatabaseSecretName
+          DMP_CLIENT_SECRET_NAME: !Ref DmpClientSecretName
       Events:
         GetApproval:
           Type: Api
